# astro-project-django

./: .env.example  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
astro_project/: asgi.py  settings.py  urls.py  wsgi.py
astrocat/: admin.py  apps.py  tests.py  urls.py
astrocat/fixtures/: solar_objects.csv
astrocat/forms/: __init__.py  feedback.py  news.py  space_objects.py  space_systems.py  users.py
astrocat/migrations/: 0001_initial.py  0002_user_alter_feedback_created_at_and_more.py  0003_remove_user_hashed_password_user_groups_and_more.py  0004_remove_spaceobject_image_path_alter_spaceobject_ex_and_more.py  0005_auto_20250512_1209.py  0006_alter_news_options_alter_spaceobject_options_and_more.py
astrocat/models/: __init__.py  feedback.py  news.py  space_objects.py  space_systems.py  users.py
astrocat/templates/: about.html  base.html  data_page.html  feedback.html  login.html  main_page.html  news.html  register.html  space_object.html  space_object_info.html  space_system.html  user.html  user_profile.html
astrocat/utils/: __init__.py  minio.py
astrocat/views/: __init__.py  feedback.py  news.py  space_objects.py  space_systems.py  users.py
